--- a/asp/Consuming_ASP.NET/Consuming_ASP.NET/Views/Quested/Score.cshtml
+++ b/asp/Consuming_ASP.NET/Consuming_ASP.NET/Views/Quested/Score.cshtml
@@ -4,12 +4,15 @@
     ViewBag.Title = "Score";
 }
 
-<div class="bottom btn zootopia" style="margin-left: 90%">
-    @Html.ActionLink("Back to Menu", "Index")
-</div>
+<a href="@Url.Action("Index", "Quested")">
+    <div class="bottom btn zootopia" style="margin-left: 90%">
+        Back to menu
+    </div>
+</a>
+
 
 <div class="container row">
-    <h2 class="zootopia" style="margin-left:20%; color: #1789DF; font-size: 800%; text-shadow: 7px 10px 45px gray;">HighScores</h2>
+    <h2 class="zootopia" style="margin-left:20%; color: white; font-size: 800%; text-shadow: 7px 10px 45px gray;">HighScores</h2>
     <br />
     <br />
 </div>
