--- a/asp/Consuming_ASP.NET/Consuming_ASP.NET/Content/Site.css
+++ b/asp/Consuming_ASP.NET/Consuming_ASP.NET/Content/Site.css
@@ -74,6 +74,14 @@ a {
     color: white;
     text-decoration: none;
 }
+p {
+    color: black;
+    text-decoration: none;
+}
+h4{
+    color: black; 
+    text-decoration: none;
+}
 
     a:hover {
         color: black;
