--- a/asp/Consuming_ASP.NET/Consuming_ASP.NET/Content/Site.css
+++ b/asp/Consuming_ASP.NET/Consuming_ASP.NET/Content/Site.css
@@ -26,7 +26,7 @@ textarea {
 }
 
 .zootopia {
-    font: zootopia;
+    font-family: Zootopia;
 }
 
 .loginregister {
@@ -35,6 +35,7 @@ textarea {
 
 .gorputza {
     margin: auto;
+    font-family: zootopia_jposters.com.arRg;    
 }
 
 .btn {
@@ -61,8 +62,8 @@ textarea {
 }
 
 .center {
-    margin-left: 23%;
-    margin-top: 17%;
+    margin: auto;
+    width: 60%;
 }
 
 .element-align {
@@ -115,6 +116,17 @@ body {
     color: white;
 }
 
+.Row {
+    display: table;
+    width: 100%; /*Optional*/
+    table-layout: fixed; /*Optional*/
+}
+
+.Column {
+    display: table-cell;
+    margin: auto;
+}
+
 .block {
     background-color: white;
     border: solid;
@@ -134,34 +146,31 @@ body {
     font-size: 115%;
     font-weight: bold;
     color: white;
-    margin-left: 1%;
+    margin-top: -15px;
 }
 
 .time {
     border: solid;
     border-color: white;
-    background-color: white;
     border-radius: 50%;
-    width: 50px;
     height: 50px;
-    color: white;
     font-weight: bold;
-    font-size: 150%;
-    padding-top: 7px;
-    padding-left: -50%;
+    padding: 2%;
+    color: white;
+    font-size: 200%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .points {
     border: solid;
     border-color: white;
-    color: white;
     font-size: 300%;
     display: inline-block;
-    width: 8%;
-    margin-left: 24%;
+    margin-left: 74%;
+    margin-right: 5%;
     padding: 2%;
-    margin-top: -1%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
@@ -173,9 +182,10 @@ body {
     text-align: center;
     height: 20%;
     width: 70%;
-    margin: 20px;
+    margin: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
     padding: 10px;
-    color: white;
     font-weight: bold;
     font-size: 200%;
     background-color: white;
@@ -183,6 +193,16 @@ body {
 }
 
 .answer {
-    width: 30%;
-    margin-left: 5%;
+    width: 46%;
+    margin-left: 2%;
 }
+
+.question_container{
+    margin-right: 0%;
+}
+
+
+.question_row {
+    margin: auto;
+}
+
