--- a/asp/Consuming_ASP.NET/Consuming_ASP.NET/Views/Quested/Score.cshtml
+++ b/asp/Consuming_ASP.NET/Consuming_ASP.NET/Views/Quested/Score.cshtml
@@ -12,7 +12,7 @@
 
 
 <div class="container row">
-    <h2 class="zootopia" style="margin-left:20%; color: white; font-size: 800%; text-shadow: 7px 10px 45px gray;">HighScores</h2>
+    <h2 class="zootopia" style="margin:auto; text-align:center; color: white; font-size: 800%; text-shadow: 7px 10px 45px gray;">HighScores</h2>
     <br />
     <br />
 </div>
